--- a/index.html
+++ b/index.html
@@ -384,8 +384,7 @@
               </h2>
             </div>
             <p>
-              Genius Tutoring emerged from a core belief that every learning journey should be as unique as the learner. Our mission? To revolutionize student preparation for pivotal academic milestones, specifically the SAT and ACT exams. We're more than just a tutoring service; we're a gateway to redefining educational experiences. We adhere to a philosophy that places individualized learning at the forefront. We recognize that each student brings a distinct set of skills and needs, which guides our approach. Our SAT preparation program goes beyond mere strategy. It's a comprehensive, dynamic foray into the realms of critical thinking, in-depth understanding, and genuine appreciation of the subject matter.
-            </p>
+              Genius Tutoring is dedicated to creating personalized learning experiences for every student, particularly for crucial academic exams like the SAT and ACT. Our mission is to transform student preparation by emphasizing individualized learning tailored to each student's unique skills and needs. Our SAT program extends past strategies, fostering critical thinking, deep understanding, and a genuine appreciation of the subject matter. We're not just a tutoring service—we're redefining education.
             <div>
               <a href="">
                 Read More
