--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </button>
 
           <div class="phone-number ml-auto">
-            <span>Call us: (914) 643-5292</span>
+            <span>Call us: (914)-643-5292 </span>
           </div>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,7 +63,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="about.html"> About Us </a>
-                    <a class="dropdown-item" href="blog.html"> Blog </a>
+                    
                     <a class="dropdown-item" href="pricing.html"> Pricing </a>
                   </div>
                 </li>
@@ -508,10 +508,16 @@
         <div class="col-md-6 ">
           <form action="https://formspree.io/f/mwkgrzle" method="POST">
             <div>
-              <input type="text" name="first" placeholder="First Name" required/>
+              <input type="text" name="first" placeholder="Your Name" required/>
             </div>
             <div>
               <input type="text" name="last" placeholder="Last Name" required/>
+            </div>
+            <div>
+              <input type="text" name="first" placeholder="Student Name" required/>
+            </div>
+            <div>
+              <input type="text" name="first" placeholder="Student Grade" required/>
             </div>
             <div>
               <input type="email" name="email" placeholder="Email" required />
@@ -520,7 +526,7 @@
               <input type="text" name="phone" placeholder="Phone Number" />
             </div>
             <div>
-              <input type="text" name="message" class="message-box" placeholder="Please tell about your childs needs" />
+              <input type="text" name="message" class="message-box" placeholder="Subject(s) they need tutoring in" />
             </div>
             <div>
             <div class="d-flex  mt-4 ">
@@ -530,9 +536,11 @@
             </div>
           </form>
         </div>
+
       </div>
 
     </div>
+    
   </section>
 
   <!-- end contact section -->
