--- a/index.html
+++ b/index.html
@@ -550,7 +550,6 @@
   <section class="info_section layout_padding">
     <div class="container">
       <div class="info_form">
-
         <div class="row">
           <div class="offset-lg-3 col-lg-3">
             <h5 class="form_heading">
@@ -566,7 +565,6 @@
             </form>
           </div>
         </div>
-
       </div>
     </div>
     <div class="container">
@@ -574,15 +572,13 @@
         <div class="col-md-3">
           <div class="info_logo">
             <div>
-              <a href="">
-                <img src="" alt="Logo" />
-                <span>
-                  Genius Tutoring
-                </span>
+              <h5>
+                Genius Tutoring
+              </h5>
               </a>
             </div>
             <p>
-              © 2023 Genius Tutoring. All rights reserved. SAT® is a registered trademark of the College Board, which was not involved in the production of, and does not endorse, this product. ACT® is a registered trademark of ACT, which was not involved in the production of, or does not endorse, this product. AP®, Advanced Placement Program® is a registered trademark of the College Board, which was not involved in the production of, and does not endorse, this product. None of the trademark holders are affiliated with Genius Tutoring or this website.
+              © 2023 Genius Tutoring. All rights reserved. SAT® is a registered trademark of the College Board, which was not involved in the production of, and does not endorse, this product. ACT® is a registered trademark of ACT, which was not involved in the production of, or does not endorse, this product.
             </p>
           </div>
         </div>
@@ -605,7 +601,6 @@
               INFORMATION
             </h5>
             <div class="footer-links">
-
               <p class="pr-0 pr-md-4 pr-md-5">
                 <a href="https://html.design/">About Us</a> <br>
                 <a href="https://html.design/">SAT Prep</a> <br>
@@ -613,12 +608,9 @@
                 <a href="https://html.design/">General Courses</a> <br>
               </p>
             </div>
-            
-
           </div>
         </div>
-        <div class="col-md-3">
-          
+        <div class="col-md-3">  
         </div>
       </div>
     </div>
