--- a/pricing.html
+++ b/pricing.html
@@ -36,7 +36,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
+            <img src="images/genius_logo2.png" alt="" />
             <span>
               Genius Tutoring
             </span>
@@ -45,9 +45,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="phone-number ml-auto">
-            <span>Call us: (123) 456-7890</span>
-          </div>
+          
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
@@ -109,7 +107,8 @@
               </h2>
             </div>
             <p>
-                Our verstille pricing options are designed to meet your needs and provide you the financial flexibility you need to help your child succeeed. Exclusive discounts are available for siblings and group sessions. Additionally Plans 1 provides a hourly discount proportional to the package size. Students at a finacial disadvantage may be eligible for additional discounts and are encoureged to reach out to us for more information. </p>
+                Our verstille pricing options are designed to meet your needs and provide you the financial flexibility you need to help your child succeeed. Rates for SAT/ACT Test Prep start at $85/Hour. Rates for K-12 session start at $65/Hour. Exclusive discounts are available for siblings and group sessions. Additionally Plans 1 provides a hourly discount proportional to the package size. Students at a finacial disadvantage may be eligible for additional discounts and are encoureged to reach out to us for more information.
+             </p>
             <div>
               <a href="">
                 Read More
@@ -135,7 +134,7 @@
           Pricing Options
         </h2>
         <p>
-            Sessions start at $70 per hour
+            Sessions typically run for 1-2 Hours.
         </p>
       </div>
       <div class="row">
@@ -155,9 +154,9 @@
                 Plan 1
               </h6>
               <p>
-                <strong>Rapid Prep:</strong> 10 Hour Package ~ 5 Sessions <br>
-                <strong>Standard Prep:</strong> 30 Hour Package ~ 15 Sessions <br>
-                <strong>Comprehensive Prep:</strong> 50 Hour Package ~ 25 Sessions 
+                <strong>Rapid Prep:</strong> 5 Sessions <br>
+                <strong>Standard Prep:</strong> 15 Sessions <br>
+                <strong>Comprehensive Prep:</strong> 25 Sessions 
               </p>
             </div>
           </div>
