--- a/contact.html
+++ b/contact.html
@@ -36,14 +36,16 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
+            <img src="images/genius_logo2.png" alt="" />
             <span>
-              Brighton
+              Genius Tutoring
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+
+          
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
@@ -91,7 +93,7 @@
 
 <!-- contact section -->
 
-<section class="contact_section layout_padding">
+ <section class="contact_section layout_padding">
   <div class="container ">
     <div class="heading_container ">
       <h2 class="">
@@ -108,10 +110,16 @@
       <div class="col-md-6 ">
         <form action="https://formspree.io/f/mwkgrzle" method="POST">
           <div>
-            <input type="text" name="first" placeholder="First Name" required/>
+            <input type="text" name="first" placeholder="Your Name" required/>
           </div>
           <div>
             <input type="text" name="last" placeholder="Last Name" required/>
+          </div>
+          <div>
+            <input type="text" name="first" placeholder="Student Name" required/>
+          </div>
+          <div>
+            <input type="text" name="first" placeholder="Student Grade" required/>
           </div>
           <div>
             <input type="email" name="email" placeholder="Email" required />
@@ -120,7 +128,7 @@
             <input type="text" name="phone" placeholder="Phone Number" />
           </div>
           <div>
-            <input type="text" name="message" class="message-box" placeholder="Please tell about your childs needs" />
+            <input type="text" name="message" class="message-box" placeholder="Subject(s) they need tutoring in" />
           </div>
           <div>
           <div class="d-flex  mt-4 ">
@@ -130,9 +138,11 @@
           </div>
         </form>
       </div>
+
     </div>
 
   </div>
+  
 </section>
 
 <!-- end contact section -->
@@ -142,7 +152,6 @@
   <section class="info_section layout_padding">
     <div class="container">
       <div class="info_form">
-
         <div class="row">
           <div class="offset-lg-3 col-lg-3">
             <h5 class="form_heading">
@@ -158,7 +167,6 @@
             </form>
           </div>
         </div>
-
       </div>
     </div>
     <div class="container">
@@ -166,16 +174,13 @@
         <div class="col-md-3">
           <div class="info_logo">
             <div>
-              <a href="">
-                <img src="images/logo.png" alt="" />
-                <span>
-                  Brighton
-                </span>
+              <h5>
+                Genius Tutoring
+              </h5>
               </a>
             </div>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration
+              © 2023 Genius Tutoring. All rights reserved. SAT® is a registered trademark of the College Board, which was not involved in the production of, and does not endorse, this product. ACT® is a registered trademark of ACT, which was not involved in the production of, or does not endorse, this product.
             </p>
           </div>
         </div>
@@ -184,10 +189,12 @@
             <h5>
               Contact Us
             </h5>
-            <p class="pr-0 pr-md-4 pr-lg-5">
-              Donec odio. Quisque volutpat mattis eros.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros
-            </p>
+            <div class="footer-links">
+              <p class="pr-0 pr-md-4 pr-lg-5">
+                <strong>Email:</strong> <a href="mailto:genius.westchester@gmail.com">genius.westchester@gmail.com</a>
+                <strong>Phone:</strong> (914) 573-5201
+              </p>
+            </div>
           </div>
         </div>
         <div class="col-md-3">
@@ -195,28 +202,23 @@
             <h5>
               INFORMATION
             </h5>
-            <p class="pr-0 pr-md-4 pr-md-5">
-              Donec odio. Quisque volutpat mattis eros.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros
-            </p>
+            <div class="footer-links">
+
+              <p class="pr-0 pr-md-4 pr-md-5">
+                <a href="https://html.design/">About Us</a> <br>
+                <a href="https://html.design/">SAT Prep</a> <br>
+                <a href="https://html.design/">ACT Prep</a> <br>
+                <a href="https://html.design/">General Courses</a> <br>
+              </p>
+            </div>
           </div>
         </div>
         <div class="col-md-3">
-          <div class="pl-0 pl-lg-5 pl-md-4">
-            <h5>
-              MY ACCOUNT
-
-            </h5>
-            <p>
-              Donec odio. Quisque volutpat mattis eros.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros
-            </p>
-
-          </div>
         </div>
       </div>
     </div>
   </section>
+
 
   <!-- end info_section -->
 
