--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
                 What?
               </h6>
               <p>
-                At Genius Tutoring, we offer a variety of services to help your child succeed. Including individualized attention, We carefully select the best educational materials and resources to ensure that your child is prepared for the SAT/ACT. Our services include one-on-one tutoring, group tutoring, and online tutoring.
+                At Genius Tutoring, we provide diverse services focused on personalized learning to ensure your child's success.
               </p>
             </div>
           </div>
