--- a/about.html
+++ b/about.html
@@ -149,8 +149,7 @@
                 Who?
               </h6>
               <p>
-                Tutoring services are offered to students of all ages. We have experts in all subjects from grade school arithmetics to College level AP classes.
-              </p>
+                We a tutors that come from all walks of life. Each of us hold a deep passion for the subjects we teach.
             </div>
           </div>
         </div>
