--- a/general.html
+++ b/general.html
@@ -200,8 +200,8 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2024 All Rights Reserved By
-      <a href="https://html.design/">Genius Tutoring</a>
+      &copy; 2019 All Rights Reserved By
+      <a href="https://html.design/">Free Html Templates</a>
     </p>
   </section>
   <!-- footer section -->
