--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           what we offer
         </h2>
         <p>
-          Have a look at what seperates us from other tutoring services
+          Have a look at what separates us from other tutoring services
         </p>
       </div>
       <div class="row">
@@ -241,7 +241,7 @@
                 Affordable Excellence
               </h6>
               <p>
-                We believe in democratizing quality education. Unlike other overpriced tutoring services, we offer top-tier SAT prep at just $75 per hour. This competitive pricing ensures that more students can access the best in test preparation without breaking the bank.
+                We believe in democratizing quality education. Unlike other overpriced tutoring services, we offer top-tier SAT/ACT prep at just $85 per hour. This competitive pricing ensures that more students can access the best in test preparation without breaking the bank.
               </p>
             </div>
           </div>
@@ -285,7 +285,7 @@
                  Data-Driven Approach
               </h6>
               <p>
-                We're revolutionizing SAT prep with our cutting-edge, data-driven methodology. Our system meticulously tracks your child's progress on each problem, providing real-time insights. This allows us to identify strengths, pinpoint areas for improvement.
+                We're revolutionizing SAT prep with our cutting-edge, data-driven methodology. Our system meticulously tracks your child's progress on each problem, providing real-time insights. This allows us to identify strengths, and pinpoint areas for improvement.
               </p>
             </div>
           </div>
@@ -327,7 +327,7 @@
             </div>
             <div class="detail-box">
               <h6>
-                One to One Engagment
+                One to One Engagement
               </h6>
               <p>
                 Other tutoring services offer group sessions, but we believe that the best way to learn is through individualized attention and ensuring that they get the most out of every session.
