--- a/about.html
+++ b/about.html
@@ -149,7 +149,8 @@
                 Who?
               </h6>
               <p>
-                We a tutors that come from all walks of life. Each of us hold a deep passion for the subjects we teach.
+                Our tutors come from diverse backgrounds, each bringing a profound passion for the subjects they teach. We're not just educators; we're lifelong learners committed to sharing our knowledge.
+              </p>
             </div>
           </div>
         </div>
