--- a/pricing.html
+++ b/pricing.html
@@ -107,8 +107,8 @@
               </h2>
             </div>
             <p>
-                Our verstille pricing options are designed to meet your needs and provide you the financial flexibility you need to help your child succeeed. Rates for SAT/ACT Test Prep start at $85/Hour. Rates for K-12 session start at $65/Hour. Exclusive discounts are available for siblings and group sessions. Additionally Plans 1 provides a hourly discount proportional to the package size. Students at a finacial disadvantage may be eligible for additional discounts and are encoureged to reach out to us for more information.
-             </p>
+              Our versatile pricing options are crafted to accommodate your needs and ensure financial flexibility, enabling your child to thrive. SAT/ACT test prep starts at $85 per hour, while K-12 tutoring begins at $65 per hour. We offer exclusive discounts for siblings and group sessions. Plan 1 features scaled hourly discounts correlating to package size. We are committed to educational accessibility—students facing financial challenges may qualify for additional discounts. Please contact us to learn more about how we can support your educational journey.
+            </p>
             <div>
               <a href="">
                 Read More
