--- a/pricing.html
+++ b/pricing.html
@@ -149,16 +149,14 @@
                 </g>
               </svg>
             </div>
-            <div class="detail-box">
-              <h6>
-                Plan 1
-              </h6>
+             <div class="detail-box">
+              <h6>Plan 1: Structured Packages</h6>
               <p>
-                <strong>Rapid Prep:</strong> 5 Sessions <br>
-                <strong>Standard Prep:</strong> 15 Sessions <br>
-                <strong>Comprehensive Prep:</strong> 25 Sessions 
+                <strong>Rapid Prep:</strong> 5 sessions for focused improvement.<br>
+                <strong>Standard Prep:</strong> 15 sessions for comprehensive coverage.<br>
+                <strong>Comprehensive Prep:</strong> 25 sessions for in-depth mastery.
               </p>
-            </div>
+             </div>
           </div>
         </div>
 
