--- a/pricing.html
+++ b/pricing.html
@@ -109,11 +109,7 @@
             <p>
               Our versatile pricing options are crafted to accommodate your needs and ensure financial flexibility, enabling your child to thrive. SAT/ACT test prep starts at $85 per hour, while K-12 tutoring begins at $65 per hour. We offer exclusive discounts for siblings and group sessions. Plan 1 features scaled hourly discounts correlating to package size. We are committed to educational accessibility—students facing financial challenges may qualify for additional discounts. Please contact us to learn more about how we can support your educational journey.
             </p>
-            <div>
-              <a href="">
-                Read More
-              </a>
-            </div>
+            
 
           </div>
         </div>
@@ -177,7 +173,7 @@
                 Plan 2
               </h6>
               <p>
-                <strong>Pay by the hour:</strong> Adjust to your child's needs on an interim basis
+                <strong>Pay by Session:</strong> Tailor each session to your child’s specific needs, offering flexibility to adjust on an interim basis.
               </p>
             </div>
           </div>
