--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="about.html"> About Us </a>
-                    <a class="dropdown-item" href="about.html"> Blog </a>
+                    <a class="dropdown-item" href="general.html"> Blog </a>
                     <a class="dropdown-item" href="pricing.html"> Pricing </a>
                   </div>
                 </li>
