--- a/pricing.html
+++ b/pricing.html
@@ -61,8 +61,8 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="about.html"> About Us </a>
-                    <a class="dropdown-item" href="about.html"> Blog </a>
-                    <a class="dropdown-item" href="about.html"> Pricing </a>
+                    <a class="dropdown-item" href="blog.html"> Blog </a>
+                    <a class="dropdown-item" href="pricing.html"> Pricing </a>
                   </div>
                 </li>
                 
@@ -73,7 +73,7 @@
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="SAT.html">SAT Prep</a>
                     <a class="dropdown-item" href="ACT.html">ACT Prep</a>
-                    <a class="dropdown-item" href="program.html">General Subjects</a>
+                    <a class="dropdown-item" href="general.html">General Subjects</a>
                   </div>
                 </li>
                 <li class="nav-item">
