--- a/index.html
+++ b/index.html
@@ -378,55 +378,29 @@
 
   <!-- client section -->
 
-  <section class="client_section layout_padding">
+<section class="client_section layout_padding">
     <div class="container layout_padding2-top">
       <div class="heading_container">
-        <h2>
-          Outcomes
-        </h2>
+        <h2>Outcomes</h2>
       </div>
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="client_container layout_padding">
-              <div class="img-box">
-                <img src="images/client.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h4>
-                  Hason Green
-                </h4>
-                <h6>
-                  Student
-                </h6>
-                <p>
-                  Brandon helped me learn the importance of time management and instilled in me a greater work ethic that made it possible to do my best in high school. The teachers took the time to break down concepts that I didn’t understand and made sure I understood the mistakes I made before moving on to the next unit. Paying attention to this level of detail in my academic performance made me more confident and ready to conquer standardized testing.
-                </p>
+            <div class="client_container">
+              <div class="detail-box testimonial-detail">
+                <h4>Hason Green</h4>
+                <h6>Student</h6>
+                <p>Brandon helped me learn the importance of time management and instilled in me a greater work ethic that made it possible to do my best in high school. The teachers took the time to break down concepts that I didn’t understand and made sure I understood the mistakes I made before moving on to the next unit. Paying attention to this level of detail in my academic performance made me more confident and ready to conquer standardized testing.</p>
                 <img src="images/quote.png" alt="">
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <div class="client_container layout_padding">
-              <div class="img-box">
-                <img src="images/client.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h4>
-                  Singi Ming
-                </h4>
-                <h6>
-                  Parent
-                </h6>
-                <p>
-                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                  alteration in
-                  some form, by injected humour, or randomised words which don't look even slightly believable. If you
-                  are
-                  going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-                  the
-                  middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined
-                </p>
+            <div class="client_container">
+              <div class="detail-box testimonial-detail">
+                <h4>Singi Ming</h4>
+                <h6>Parent</h6>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined</p>
                 <img src="images/quote.png" alt="">
               </div>
             </div>
@@ -439,7 +413,6 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-
     </div>
   </section>
 
@@ -464,22 +437,22 @@
         <div class="col-md-6 ">
           <form action="https://formspree.io/f/mwkgrzle" method="POST">
             <div>
-              <input type="text" name="first" placeholder="Your Name" required/>
+              <input type="text" name="first" placeholder="Parent First Name" required/>
             </div>
             <div>
-              <input type="text" name="last" placeholder="Last Name" required/>
+              <input type="text" name="last" placeholder="Parent Last Name" required/>
             </div>
             <div>
-              <input type="text" name="first" placeholder="Student Name" required/>
+              <input type="email" name="email" placeholder="Parent Email" required />
+            </div>
+            <div>
+              <input type="text" name="phone" placeholder="Parent Phone Number" />
+            </div>
+            <div>
+              <input type="text" name="student" placeholder="Student Name" required/>
             </div>
             <div>
               <input type="text" name="first" placeholder="Student Grade" required/>
-            </div>
-            <div>
-              <input type="email" name="email" placeholder="Email" required />
-            </div>
-            <div>
-              <input type="text" name="phone" placeholder="Phone Number" />
             </div>
             <div>
               <input type="text" name="message" class="message-box" placeholder="Subject(s) they need tutoring in" />
@@ -514,7 +487,7 @@
           </div>
           <div class="col-md-6">
             <form action="#">
-              <input type="text" placeholder="Enter Your email">
+              <input type="text" placeholder="Enter Your Email">
               <button>
                 subscribe
               </button>
