--- a/pricing.html
+++ b/pricing.html
@@ -109,8 +109,6 @@
             <p>
               Our versatile pricing options are crafted to accommodate your needs and ensure financial flexibility, enabling your child to thrive. SAT/ACT test prep starts at $85 per hour, while K-12 tutoring begins at $65 per hour. We offer exclusive discounts for siblings and group sessions. Plan 1 features scaled hourly discounts correlating to package size. We are committed to educational accessibility—students facing financial challenges may qualify for additional discounts. Please contact us to learn more about how we can support your educational journey.
             </p>
-            
-
           </div>
         </div>
       </div>
@@ -146,7 +144,7 @@
               </svg>
             </div>
              <div class="detail-box">
-              <h6>Plan 1: Structured Packages</h6>
+              <h6>Plan 1:</h6>
               <p>
                 <strong>Rapid Prep:</strong> 5 sessions for focused improvement.<br>
                 <strong>Standard Prep:</strong> 15 sessions for comprehensive coverage.<br>
