--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
           <div class="carousel-item">
             <div class="client_container">
               <div class="detail-box testimonial-detail">
-                <h4>Singi Ming</h4>
+                <h4>Yu Liu</h4>
                 <h6>Parent</h6>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined</p>
                 <img src="images/quote.png" alt="">
@@ -507,7 +507,7 @@
               </a>
             </div>
             <p>
-              © 2023 Genius Tutoring. All rights reserved. SAT® is a registered trademark of the College Board, which was not involved in the production of, and does not endorse, this product. ACT® is a registered trademark of ACT, which was not involved in the production of, or does not endorse, this product.
+              © 2024 Genius Tutoring. All rights reserved. SAT® is a registered trademark of the College Board, which was not involved in the production of, and does not endorse, this product. ACT® is a registered trademark of ACT, which was not involved in the production of, or does not endorse, this product.
             </p>
           </div>
         </div>
