--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               <div class="detail-box testimonial-detail">
                 <h4>Hason Green</h4>
                 <h6>Student</h6>
-                <p>Brandon helped me learn the importance of time management and instilled in me a greater work ethic that made it possible to do my best in high school. The teachers took the time to break down concepts that I didn’t understand and made sure I understood the mistakes I made before moving on to the next unit. Paying attention to this level of detail in my academic performance made me more confident and ready to conquer standardized testing.</p>
+                <p>Genius Tutoring significantly enhanced my understanding of time management and bolstered my work ethic, which was crucial for excelling in high school. My tutor dedicated effort to clarifying complex concepts and ensured I comprehended my errors before progressing to the nest topic.</p>
                 <img src="images/quote.png" alt="">
               </div>
             </div>
