--- a/contact.html
+++ b/contact.html
@@ -93,57 +93,57 @@
 
 <!-- contact section -->
 
- <section class="contact_section layout_padding">
-  <div class="container ">
-    <div class="heading_container ">
-      <h2 class="">
-        Request
-        <span>
-          A call Back
-        </span>
+  <section class="contact_section layout_padding">
+    <div class="container ">
+      <div class="heading_container ">
+        <h2 class="">
+          Request
+          <span>
+            A call Back
+          </span>
 
-      </h2>
+        </h2>
+      </div>
     </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 ">
-        <form action="https://formspree.io/f/mwkgrzle" method="POST">
-          <div>
-            <input type="text" name="first" placeholder="Your Name" required/>
-          </div>
-          <div>
-            <input type="text" name="last" placeholder="Last Name" required/>
-          </div>
-          <div>
-            <input type="text" name="first" placeholder="Student Name" required/>
-          </div>
-          <div>
-            <input type="text" name="first" placeholder="Student Grade" required/>
-          </div>
-          <div>
-            <input type="email" name="email" placeholder="Email" required />
-          </div>
-          <div>
-            <input type="text" name="phone" placeholder="Phone Number" />
-          </div>
-          <div>
-            <input type="text" name="message" class="message-box" placeholder="Subject(s) they need tutoring in" />
-          </div>
-          <div>
-          <div class="d-flex  mt-4 ">
-            <button>
-              SEND
-            </button>
-          </div>
-        </form>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 ">
+          <form action="https://formspree.io/f/mwkgrzle" method="POST">
+            <div>
+              <input type="text" name="first" placeholder="Parent First Name" required/>
+            </div>
+            <div>
+              <input type="text" name="last" placeholder="Parent Last Name" required/>
+            </div>
+            <div>
+              <input type="email" name="email" placeholder="Parent Email" required />
+            </div>
+            <div>
+              <input type="text" name="phone" placeholder="Parent Phone Number" />
+            </div>
+            <div>
+              <input type="text" name="student" placeholder="Student Name" required/>
+            </div>
+            <div>
+              <input type="text" name="first" placeholder="Student Grade" required/>
+            </div>
+            <div>
+              <input type="text" name="message" class="message-box" placeholder="Subject(s) they need tutoring in" />
+            </div>
+            <div>
+            <div class="d-flex  mt-4 ">
+              <button>
+                SEND
+              </button>
+            </div>
+          </form>
+        </div>
+
       </div>
 
     </div>
-
-  </div>
-  
-</section>
+    
+  </section>
 
 <!-- end contact section -->
 
