--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
               </h2>
             </div>
             <p>
-              Welcome to Genius Tutoring, your dedicated partner in mastering college readiness. With a deep commitment to educational excellence and a passion for empowering students. At Genius Tutoring, we believe that every student possesses unique strengths and learning styles, which is why our approach is deeply individualized and tailored to each learner's needs.
+              Welcome to Genius Tutoring, where a small, close-knit team of educated professionals from diverse backgrounds is dedicated to nurturing your child’s academic potential. We are deeply committed to educational excellence and are passionate about empowering each student on their journey to college readiness. At Genius Tutoring, we recognize the distinct strengths and learning styles of every student. This understanding drives our personalized, one-on-one approach, ensuring that each learner receives the focused attention and tailored support they deserve. Using a data-driven methodology, we meticulously cater to individual needs, fostering an environment where students can truly thrive.
             </p>
             <div>
               <a href="">
