--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
                 Who?
               </h6>
               <p>
-                Our tutors come from diverse backgrounds, each bringing a profound passion for the subjects they teach. We're not just educators; we're lifelong learners committed to sharing our knowledge.
+                Our tutors come from diverse backgrounds, each bringing a profound passion for the subjects they teach.
               </p>
             </div>
           </div>
