--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                        In an era where college admissions are more competitive than ever, mastering college readiness exams like the SAT and ACT remains a pivotal stepping stone. These exams are not just tests of knowledge, but gateways to academic and career opportunities. Embrace the relevance of these crucial assessments in today’s academic landscape
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
+                      <a href="SAT.HTML" class="btn-1">
                         Read More
                       </a>
                       <a href="contact.html"" class="btn-2">
@@ -140,7 +140,7 @@
                       Shape Your Child’s Future with the New Digital SAT: The SAT has evolved, and so have we. Preparing for the digital SAT is about more than just learning content; it's about adapting to a new way of thinking and testing. At Genius Tutoring, we equip your child with the skills and strategies needed to excel in this modern testing format, setting them up for success in the digital age.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
+                      <a href="SAT.html" class="btn-1">
                         Read More
                       </a>
                       <a href="contact.html" class="btn-2">
@@ -162,7 +162,7 @@
                       </span>
                     </h1>
                     <p>
-                      Schedule a Free Diagnostic Exam Today! Begin your child's journey to excellence with our no-obligation, free diagnostic exam. This initial assessment is your window into how we tailor our tutoring to each student's unique needs, providing a baseline from which we build a personalized, effective learning plan. Don’t let your child miss out on the advantages of early preparation.
+                       Begin your child's journey to excellence with our no-obligation, free diagnostic exam. This initial assessment is your window into how we tailor our tutoring to each student's unique needs, providing a baseline from which we build a personalized, effective learning plan. Don’t let your child miss out on the advantages of early preparation.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
@@ -181,13 +181,13 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      SAT/ACT Coming Soon? <br />
+                      Unlock Your Child's Potential <br />
                       <span>
                         Start Today!
                       </span>
                     </h1>
                     <p>
-                      Need to prepare for the SAT or ACT Soon? We've got you covered! Our intensive, short-term rapid SAT and ACT prep programs are designed to help students maximize their scores in a condensed timeframe. Whether your child is preparing for a retake or simply needs a quick refresher, our crash courses are the perfect solution.
+                        Looking for top-notch K-12 tutoring? Genius Tutoring offers tailored educational programs to help your child excel in subjects ranging from Math and Science to English and Social Studies. Our one-on-one sessions ensure personalized attention and are designed to meet your child at their level and lift them towards academic excellence.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
@@ -361,7 +361,7 @@
               Genius Tutoring is dedicated to creating personalized learning experiences for every student, particularly for crucial academic exams like the SAT and ACT. Our mission is to transform student preparation by emphasizing individualized learning tailored to each student's unique skills and needs. Our SAT program extends past strategies, fostering critical thinking, deep understanding, and a genuine appreciation of the subject matter. We're not just a tutoring service—we're redefining education.
             </p>
             <div>
-              <a href="">
+              <a href="SAT.html">
                 Read More
               </a>
             </div>
